Add initial implementation of audio processing and document generation functions

--- a/playground/llm_call.ipynb
+++ b/playground/llm_call.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -331,75 +331,77 @@
     "from langchain import LLMChain\n",
     "import os\n",
     "\n",
-    "# 1) Dein Pydantic-Schema\n",
-    "class PsychotherapieAntrag(BaseModel):\n",
-    "    anrede: str = Field(..., description=\"Anrede, z.B. 'Sehr geehrte Frau Dr. Müller,'\")\n",
-    "    relevante_soziodemographische_daten: str = Field(\n",
-    "        ..., description=\"1. Relevante soziodemographische Daten: aktuell ausgeübter Beruf, Familienstand, Zahl der Kinder, Lebenssituation, Geschwister und ähnliches\"\n",
+    "def LLMCall(transkript_text: str) -> dict:\n",
+    "    # 1) Dein Pydantic-Schema\n",
+    "    class PsychotherapieAntrag(BaseModel):\n",
+    "        anrede: str = Field(..., description=\"Anrede, z.B. 'Sehr geehrte Frau Dr. Müller,'\")\n",
+    "        relevante_soziodemographische_daten: str = Field(\n",
+    "            ..., description=\"1. Relevante soziodemographische Daten: aktuell ausgeübter Beruf, Familienstand, Zahl der Kinder, Lebenssituation, Geschwister und ähnliches\"\n",
+    "        )\n",
+    "        symptomatik_psychischer_befund: str = Field(\n",
+    "            ..., description=\"2. Symptomatik und psychischer Befund: Von Patientin geschilderte Symptomatik, Angaben zu Schwere und Verlauf; Auffälligkeiten bei Kontaktaufnahme, Interaktion, Erscheinungsbild; psychischer Befund; Krankheitsverständnis\"\n",
+    "        )\n",
+    "        somatischer_befund: str = Field(\n",
+    "            ..., description=\"3. Somatischer Befund / Konsiliarbericht: Somatische Befunde, aktuelle psychopharmakologische Medikation, Vorbehandlungen\"\n",
+    "        )\n",
+    "        lebensgeschichtliche_angaben: str = Field(\n",
+    "            ..., description=\"4. Behandlungsrelevante Angaben zur Lebensgeschichte / Psychosomatik / Systemisches Erklärungsmodell\"\n",
+    "        )\n",
+    "        diagnose_zeitpunkt: str = Field(\n",
+    "            ..., description=\"5. Diagnose zum Zeitpunkt der Antragstellung\"\n",
+    "        )\n",
+    "        behandlungsplan_prognose: str = Field(\n",
+    "            ..., description=\"6. Behandlungsplan und Prognose: Therapieziele, Behandlungsplan, Setting-Begründung, Kooperation\"\n",
+    "        )\n",
+    "        signatur: str = Field(\n",
+    "            ..., description=\"Unterschrift / Signaturblock\"\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "    # 2) Erzeuge den Parser aus Deinem Model\n",
+    "    parser = PydanticOutputParser(pydantic_object=PsychotherapieAntrag)\n",
+    "    format_instructions = parser.get_format_instructions()\n",
+    "\n",
+    "    # 3) Baue Dein Prompt\n",
+    "    system = SystemMessagePromptTemplate.from_template(\n",
+    "        \"Du bist ein Assistent, der aus dem gegebenen Transkript einen vollständigen Psychotherapie-Antrag \"\n",
+    "        \"(6 Abschnitte plus Anrede und Signatur) **ausschließlich als JSON** gemäß dem Pydantic-Schema erstellt. \"\n",
+    "        \"Sprache: Deutsch. Förmlich, psychologische Fachsprache, keine zusätzlichen Informationen.\"\n",
     "    )\n",
-    "    symptomatik_psychischer_befund: str = Field(\n",
-    "        ..., description=\"2. Symptomatik und psychischer Befund: Von Patientin geschilderte Symptomatik, Angaben zu Schwere und Verlauf; Auffälligkeiten bei Kontaktaufnahme, Interaktion, Erscheinungsbild; psychischer Befund; Krankheitsverständnis\"\n",
-    "    )\n",
-    "    somatischer_befund: str = Field(\n",
-    "        ..., description=\"3. Somatischer Befund / Konsiliarbericht: Somatische Befunde, aktuelle psychopharmakologische Medikation, Vorbehandlungen\"\n",
-    "    )\n",
-    "    lebensgeschichtliche_angaben: str = Field(\n",
-    "        ..., description=\"4. Behandlungsrelevante Angaben zur Lebensgeschichte / Psychosomatik / Systemisches Erklärungsmodell\"\n",
-    "    )\n",
-    "    diagnose_zeitpunkt: str = Field(\n",
-    "        ..., description=\"5. Diagnose zum Zeitpunkt der Antragstellung\"\n",
-    "    )\n",
-    "    behandlungsplan_prognose: str = Field(\n",
-    "        ..., description=\"6. Behandlungsplan und Prognose: Therapieziele, Behandlungsplan, Setting-Begründung, Kooperation\"\n",
-    "    )\n",
-    "    signatur: str = Field(\n",
-    "        ..., description=\"Unterschrift / Signaturblock\"\n",
+    "\n",
+    "    human = HumanMessagePromptTemplate.from_template(\"\"\"\n",
+    "    Hier das Transkript der Audio-Memo (auf Deutsch):\n",
+    "    \\\"\\\"\\\"{transkript}\\\"\\\"\\\"\n",
+    "\n",
+    "    {format_instructions}\n",
+    "    \"\"\")\n",
+    "\n",
+    "    prompt = ChatPromptTemplate.from_messages([system, human])\n",
+    "\n",
+    "    # 4) LLM und Chain initialisieren\n",
+    "    llm = ChatOpenAI(\n",
+    "        model=\"gpt-4\",\n",
+    "        temperature=0.0,\n",
+    "        api_key=os.getenv(\"OPENAI_API_KEY\")\n",
     "    )\n",
     "\n",
+    "    chain = LLMChain(\n",
+    "        llm=llm,\n",
+    "        prompt=prompt,\n",
+    "        output_parser=parser\n",
+    "    )\n",
     "\n",
-    "# 2) Erzeuge den Parser aus Deinem Model\n",
-    "parser = PydanticOutputParser(pydantic_object=PsychotherapieAntrag)\n",
-    "format_instructions = parser.get_format_instructions()\n",
+    "    # 5) Transkript (in einer anderen Zelle definiert)\n",
+    "    # z.B.:\n",
+    "    # transkript_text = \"\"\"Frau Meier, 38 Jahre, ...\"\"\"\n",
     "\n",
-    "# 3) Baue Dein Prompt\n",
-    "system = SystemMessagePromptTemplate.from_template(\n",
-    "    \"Du bist ein Assistent, der aus dem gegebenen Transkript einen vollständigen Psychotherapie-Antrag \"\n",
-    "    \"(7-Abschnitte plus Anrede und Signatur) **ausschließlich als JSON** gemäß dem Pydantic-Schema erstellt. \"\n",
-    "    \"Sprache: Deutsch. Förmlich, keine zusätzlichen Informationen.\"\n",
-    ")\n",
-    "\n",
-    "human = HumanMessagePromptTemplate.from_template(\"\"\"\n",
-    "Hier das Transkript der Audio-Memo (auf Deutsch):\n",
-    "\\\"\\\"\\\"{transkript}\\\"\\\"\\\"\n",
-    "\n",
-    "{format_instructions}\n",
-    "\"\"\")\n",
-    "\n",
-    "prompt = ChatPromptTemplate.from_messages([system, human])\n",
-    "\n",
-    "# 4) LLM und Chain initialisieren\n",
-    "llm = ChatOpenAI(\n",
-    "    model=\"gpt-4\",\n",
-    "    temperature=0.0,\n",
-    "    api_key=os.getenv(\"OPENAI_API_KEY\")\n",
-    ")\n",
-    "\n",
-    "chain = LLMChain(\n",
-    "    llm=llm,\n",
-    "    prompt=prompt,\n",
-    "    output_parser=parser\n",
-    ")\n",
-    "\n",
-    "# 5) Transkript (in einer anderen Zelle definiert)\n",
-    "# z.B.:\n",
-    "# transkript_text = \"\"\"Frau Meier, 38 Jahre, ...\"\"\"\n",
-    "\n",
-    "# 6) Aufruf und direktes Parsen\n",
-    "antrag_obj: PsychotherapieAntrag = chain.predict_and_parse(\n",
-    "    transkript=transkript_text,\n",
-    "    format_instructions=format_instructions\n",
-    ")\n",
-    "\n",
+    "    # 6) Aufruf und direktes Parsen\n",
+    "    antrag_obj: PsychotherapieAntrag = chain.predict_and_parse(\n",
+    "        transkript=transkript_text,\n",
+    "        format_instructions=format_instructions\n",
+    "    )\n",
+    "    data = antrag_obj.model_dump()\n",
+    "    return data\n",
     "# 7) Nutze Dein Objekt\n",
     "# Option A: model_dump_json (Pydantic v2)\n",
     "# gibt valid JSON mit Einrückung zurück, aber escapet non-ASCII-Zeichen\n",
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +505,7 @@
     "# antrag_obj: PsychotherapieAntrag\n",
     "\n",
     "# Convert Pydantic model to plain dict\n",
-    "data = antrag_obj.model_dump()  # v2 Pydantic; if v1 use .dict()\n",
+    "  # v2 Pydantic; if v1 use .dict()\n",
     "\n",
     "# Map field names to their human-readable titles\n",
     "titles = {\n",
