--- a/playground/preprocess_audio.ipynb
+++ b/playground/preprocess_audio.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
     "import sounddevice as sd\n",
     "import soundfile as sf\n",
     "\n",
-    "def record_memo(filename: str, duration: float = None, samplerate: int = 16000):\n",
+    "def record_memo(filename: str, duration: float = 20, samplerate: int = 16000):\n",
     "    \"\"\"\n",
     "    Records audio from the default microphone and writes it to `filename`.\n",
     "    If duration is None, it records until you hit Ctrl+C.\n",
@@ -172,32 +172,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Dies kommt nach ständiger Rechtsprechung nur dann in Betracht, wenn eine '\n",
-      " 'eindeutige Unbilligkeit von erheblichem Gewicht vorliegt. Eine solche liegt '\n",
-      " 'vor, wenn aufgrund der atypischen Umstände des Einzelfalls, die sich aus dem '\n",
-      " 'groben Maßstab des § 29 Abs. 1 Nr. 1 Gewerbesteuergesetz allgemein ergebende '\n",
-      " 'Unbilligkeit offensichtlich übertroffen wird, z.B. BfH-Urteil vom 25.11.2009 '\n",
-      " 'I R 18 aus 08. Dies ist z.B. dann der Fall, wenn der Steuerpflichtige in der '\n",
-      " 'Betriebsstätte, die nach Art und Umfang von erheblicher Bedeutung ist, auf '\n",
-      " 'Dauer und ausschließlich Leiharbeitnehmer einsetzt, anstatt, wie sonst im '\n",
-      " 'Allgemeinen üblich, die eingesetzten Arbeitskräfte selbst zu beschäftigen '\n",
-      " 'und dadurch der Gemeinde, in der diese Betriebsstätte unterhalten wird, das '\n",
-      " 'Gewerbesteueraufkommen aus dieser Betriebsstätte vollständig entgeht. Eine '\n",
-      " 'Unbilligkeit im Sinne des § 33 Abs. 1 Satz 1 Gewerbesteuergesetz kommt auch '\n",
-      " 'dann in Betracht, wenn durch das Vorhandensein einer Betriebsstätte, einer '\n",
-      " 'Gemeinde andere Lasten als Arbeitnehmerkosten entstehen und diese '\n",
-      " 'finanziellen Lasten ins Gewicht fallen und atypisch sind. Hingegen führt '\n",
-      " 'allein der Umstand, dass in bestimmten Betriebsstätten keine Arbeitslöhne '\n",
-      " 'angefallen sind und deshalb auf diese nur Zerlegungsanteile von 0 Euro '\n",
-      " 'entfallen, nicht zur offenbaren Unbilligkeit des von § 29 Abs. 1 Nummer 1 '\n",
-      " 'Gewerbesteuergesetz vorgegebenen Aufteilungsmaßstabs.\\n')\n"
+      "('Üblicherweise erlässt die Polizei Verfügungen, die ein bestimmtes '\n",
+      " 'Verhaltensangebot an den Adressaten beinhalten. Diesem wird ein Tun, Dulden '\n",
+      " 'oder Unterlassen aufgegeben. Ihm wird damit ermöglicht, selbst der ihm '\n",
+      " 'obliegenden Verpflichtung nachzukommen, um sich ein ansonsten anschließendes '\n",
+      " 'Vollstreckungsverfahren abzuwenden. Im Zentrum polizeilicher Tätigkeit steht '\n",
+      " 'somit der Verwaltungsakt. Dessen allgemeine Wirksamkeits- und '\n",
+      " 'Verfahrensanforderungen sind zu beachten. Insbesondere muss der '\n",
+      " 'Verwaltungsakt bekannt gegeben werden. Erst mit der Bekanntgabe wird der '\n",
+      " 'Verwaltungsakt wirksam. Art. 43 Abs. 1 Bayerisches '\n",
+      " 'Verwaltungsverfahrensgesetz. Die Bekanntgabe bereitet dort wenig Probleme, '\n",
+      " 'wo ein Verfügungsadressat anwesend und prinzipiell zur Beachtung der ihm '\n",
+      " 'aufgegebenen Verhaltenspflicht in der Lage und Willens ist. Es sind aber '\n",
+      " 'auch Situationen denkbar, in denen die Bekanntgabe aus tatsächlichen oder '\n",
+      " 'rechtlichen Gründen Schwierigkeiten bereitet oder der vorherige Erlass einer '\n",
+      " 'Verfügung zu einem Zeitverlust führt, wodurch eine wirksame Gefahrenabwehr '\n",
+      " 'beeinträchtigt würde. Wenn aber kein wirksamer Verwaltungsakt erlassen '\n",
+      " 'werden kann, vollzieht sich die polizeiliche Gefahrenabwehr nicht nach dem '\n",
+      " 'in den Abschnitten c und d dargestellten Schema zum Befehl und Zwang. Dem '\n",
+      " 'tragen Sonderregelungen des PRG Rechnungen, um die es im Folgenden geht. '\n",
+      " 'Maßnahmen bei Abwesenheit des Betroffenen. Ist der Verfügungsadressat '\n",
+      " 'abwesend, so kann die Bekanntgabe eines Verwaltungsakts in der Regel '\n",
+      " 'unproblematisch vorgenommen werden. Eine besondere Form ist dabei nicht '\n",
+      " 'vorgeschrieben. Der Verwaltungsakt kann schriftlich, mündlich oder in '\n",
+      " 'anderer Weise erlassen werden. § 37 Abs. 2 Satz 1 bei VBVfG Im Polizeirecht '\n",
+      " 'wird wegen der Dringlichkeit des\\n')\n"
      ]
     }
    ],
