--- a/playground/llm_call.ipynb
+++ b/playground/llm_call.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,34 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/referral/lib/python3.12/site-packages/langchain/chains/llm.py:342: UserWarning: The predict_and_parse method is deprecated, instead pass an output parser directly to LLMChain.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"anrede\": \"Sehr geehrte Damen und Herren,\",\n",
-      "  \"relevante_soziodemographische_daten\": \"Martina Muster, 38 Jahre alt, verheiratet, lebt mit ihrem Mann und zwei Töchtern (sechs und drei Jahre) in einem Einfamilienhaus am Stadtrand und arbeitet Teilzeit als Grafikdesignerin in einem Werbeunternehmen. Sie hat keine Geschwister.\",\n",
-      "  \"symptomatik_psychischer_befund\": \"Sie berichtet seit etwa sechs Monaten von anhaltender Niedergeschlagenheit und Anhedonie – Spaziergänge oder Treffen mit Freundinnen machen ihr kaum noch Freude. Tagsüber fühlt sie sich oft erschöpft und hat Konzentrationsprobleme, was ihre Kreativität im Job erheblich einschränkt. Einschlaf­störungen und frühes Erwachen sind häufig, verbunden mit Grübeln über berufliche Fehler und Konflikte in der Ehe. Affekt abgeflacht, gelegentliche Stimmungseinbrüche und Wertlosigkeitsgefühle. Beim Erstgespräch wirkte sie motorisch leicht verzögert, mit gedrückter Mimik und zurückhaltender Stimme.\",\n",
-      "  \"somatischer_befund\": \"Somatisch ist sie ansonsten unauffällig; die bekannte Schilddrüsenunterfunktion ist gut eingestellt, und aktuell nimmt sie kein Psychopharmakon. Ein kardiologisches Konsil im letzten Quartal ergab normalen Blutdruck und unauffälliges EKG. 2023 hatte sie eine vierwöchige Physiotherapie wegen einer Schulterneuralgie, ansonsten keinerlei relevante Vorerkrankungen – keine psychosomatischen Bauchschmerzen oder vegetative Dystonie.\",\n",
-      "  \"lebensgeschichtliche_angaben\": \"Martina wuchs als Einzelkind in einer Familie auf, in der ihre Mutter phasenweise unter Angststörungen litt, was zu einer eher distanzierten Beziehung führte. Früh entstand hoher Leistungsdruck in der Schule, sie entwickelte Perfektionismustendenzen und adaptive Coping-Strategien: exzessives Arbeiten oder Rückzug. Seit der Geburt ihrer zweiten Tochter fühlt sie sich zunehmend überfordert und isoliert, der Schichtdienst ihres Mannes erschwert die partnerschaftliche Unterstützung.\",\n",
-      "  \"diagnose_zeitpunkt\": \"Diagnostisch ergibt sich eine leichte depressive Episode (ICD-10 F32.0) mit typischen Symptomen von Anhedonie, vermindertem Selbstwert und leichtem Schlafdefizit.\",\n",
-      "  \"behandlungsplan_prognose\": \"Wir haben gemeinsam Therapieziele definiert: Verbesserung der Schlafhygiene durch strukturierte Tagebuchführung und achtsamkeitsbasierte Übungen, Steigerung positiver Aktivitäten (tägliche Spaziergänge, regelmäßige Treffen mit Freundinnen), kognitive Umstrukturierung zur Bearbeitung von Perfektionismus und dysfunktionalen Gedanken sowie Förderung von Ressourcen und Stärkung des Selbstwertgefühls durch klientenzentrierte Interventionen. Für das initiale Setting empfehle ich wöchentliche 50-minütige Sitzungen über mindestens zwölf Einheiten, um Stabilisierung und Symptomreduktion zu erreichen. Eine interdisziplinäre Zusammenarbeit mit dem Hausarzt und gegebenenfalls einer Physiotherapeutin zur Entspannung der Muskelverspannungen ist vorgesehen.\",\n",
-      "  \"signatur\": \"Mit freundlichen Grüßen, Dr. Sabine Meier\"\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pydantic import BaseModel, Field\n",
     "from langchain.prompts import (\n",
@@ -404,78 +379,23 @@
     "    return data\n",
     "# 7) Nutze Dein Objekt\n",
     "# Option A: model_dump_json (Pydantic v2)\n",
-    "# gibt valid JSON mit Einrückung zurück, aber escapet non-ASCII-Zeichen\n",
-    "print(antrag_obj.model_dump_json(indent=2))"
+    "# gibt valid JSON mit Einrückung zurück, aber escapet non-ASCII-Zeichen\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('{\\n'\n",
-      " '  \"anrede\": \"Sehr geehrte Damen und Herren,\",\\n'\n",
-      " '  \"relevante_soziodemographische_daten\": \"Martina Muster ist 38 Jahre alt, '\n",
-      " 'verheiratet, Mutter einer sechsjährigen Tochter und einer dreijährigen '\n",
-      " 'Tochter. Sie arbeitet Teilzeit als Grafikdesignerin in einem '\n",
-      " 'Werbeunternehmen. Ihre Familie lebt in einem Einfamilienhaus am Stadtrand, '\n",
-      " 'sie hat keine Geschwister.\",\\n'\n",
-      " '  \"symptomatik_psychischer_befund\": \"Martina berichtet, dass sie tagsüber '\n",
-      " 'häufig Erschöpfung und Konzentrationsschwierigkeiten verspürt, was sich '\n",
-      " 'negativ auf ihre Kreativität im Beruf auswirkt. In Bezug auf die Symptomatik '\n",
-      " 'beschreibt sie seit etwa sechs Monaten eine anhaltende Niedergestimmtheit '\n",
-      " 'und Anhedonie. Sie könne nichts mehr richtig genießen, weder Spaziergänge '\n",
-      " 'noch Treffen mit Freundinnen. Gelegentlich klagt sie über '\n",
-      " 'Einschlaf\\xadstörungen und frühes Erwachen, verbunden mit gedanklichem '\n",
-      " 'Grübeln — vor allem über berufliche Fehler oder Konflikte in ihrer Ehe. Ihr '\n",
-      " 'Affekt sei oft verflacht, mit gelegentlichen Stimmungseinbrüchen und '\n",
-      " 'Gefühlen von Wertlosigkeit. Beim Erstgespräch wirkte sie leicht verzögert in '\n",
-      " 'der Motorik, mit gedrückter Mimik und zurückhaltender Stimme. Der psychische '\n",
-      " 'Befund deutet auf eine leichte bis mittelgradige depressive Episode hin, mit '\n",
-      " 'somatischer Komponente in Form von innerer Unruhe und '\n",
-      " 'Muskelverspannungen.\",\\n'\n",
-      " '  \"somatischer_befund\": \"Somatisch ist Martina ansonsten unauffällig. In der '\n",
-      " 'Vorgeschichte existiert eine Schilddrüsen\\xadunterfunktion, die medikamentös '\n",
-      " 'gut eingestellt ist. Aktuell nimmt sie kein Psychopharmakon ein. Ein '\n",
-      " 'kardiologisches Konsil im letzten Quartal ergab einen normalen Blutdruck und '\n",
-      " 'unauffällige EKG-Befunde. Vorbehandlung: Im Jahr 2023 eine vierwöchige '\n",
-      " 'Physiotherapie wegen Schulterneuralgie, ansonsten keine relevante somatische '\n",
-      " 'Vorerkrankung. Es liegen keine Hinweise auf psychosomatische Bauchschmerzen '\n",
-      " 'oder vegetative Dystonie vor.\",\\n'\n",
-      " '  \"lebensgeschichtliche_angaben\": \"Martina wuchs als Einzelkind in einer '\n",
-      " 'stabilen Familie auf, hatte jedoch früh hohen Leistungsdruck in der Schule. '\n",
-      " 'Ihre Mutter litt selbst phasenweise unter Angststörungen, was zu einer '\n",
-      " 'emotional distanzierten Eltern-Kind-Beziehung führte. Martina entwickelte in '\n",
-      " 'der Adoleszenz eine hohe Perfektionismustendenz und erlernte adaptive '\n",
-      " 'Coping-Strategien wie exzessives Arbeiten und Rückzug. Seit der Geburt ihrer '\n",
-      " 'zweiten Tochter vor drei Jahren fühle sie sich jedoch zunehmend überfordert '\n",
-      " 'und isoliert. Die partnerschaftliche Unterstützung sei begrenzt, ihr Mann '\n",
-      " 'arbeite im Schichtdienst. Sie beschreibt ein systemisches Erklärungsmodell, '\n",
-      " 'in dem familiäre Rollenmuster und elterlicher Anteilnahme Einfluss auf ihre '\n",
-      " 'Selbstwahrnehmung und ihr Stressregulationsverhalten haben.\",\\n'\n",
-      " '  \"diagnose_zeitpunkt\": \"Diagnose zum Zeitpunkt der Antragstellung: Leichte '\n",
-      " 'depressive Episode (ICD-10 F32.0) mit typischen Symptomen von Anhedonie, '\n",
-      " 'Verminderung des Selbstwertgefühls und leichtem Schlafdefizit.\",\\n'\n",
-      " '  \"behandlungsplan_prognose\": \"Für den Behandlungsplan wurden gemeinsam mit '\n",
-      " 'Martina folgende Therapieziele festgelegt: Verbesserung der Schlafhygiene '\n",
-      " 'und Reduktion des Grübelns durch strukturierte Tagebuchführung und '\n",
-      " 'achtsamkeitsbasierte Übungen. Steigerung der positiven Aktivitäten '\n",
-      " '(Behavioral Activation), z. B. tägliche Spaziergänge und regelmäßige Treffen '\n",
-      " 'mit Freundinnen. Bearbeitung von Perfektionismus und dysfunktionalen '\n",
-      " 'Kognitionen mithilfe kognitiver Umstrukturierung. Förderung von Ressourcen '\n",
-      " 'und Stärkung des Selbstwertgefühls durch klientenzentrierte Interventionen. '\n",
-      " 'Wir empfehlen ein initiales Setting mit wöchentlich einer 50-minütigen '\n",
-      " 'Sitzung für mindestens zwölf Sitzungen (mittelfristige Zielsetzung), um '\n",
-      " 'Stabilisierung und Symptomreduktion zu erreichen. Eine interdisziplinäre '\n",
-      " 'Kooperation mit dem Hausarzt und bei Bedarf einer Physiotherapeutin zur '\n",
-      " 'Entspannung der Muskelverspannungen ist geplant.\",\\n'\n",
-      " '  \"signatur\": \"Mit freundlichen Grüßen, Dr. Sabine Meier, Psychologische '\n",
-      " 'Psychotherapeutin, Praxis am Lindenweg in München\"\\n'\n",
-      " '}')\n"
+     "ename": "NameError",
+     "evalue": "name 'antrag_obj' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpprint\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpp\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m pp.pprint(\u001b[43mantrag_obj\u001b[49m.model_dump_json(indent=\u001b[32m2\u001b[39m))\n",
+      "\u001b[31mNameError\u001b[39m: name 'antrag_obj' is not defined"
      ]
     }
    ],
@@ -486,14 +406,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dokument gespeichert als: Psychotherapie_Antrag.docx\n"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     27\u001b[39m doc = Document()\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# 1) Anrede\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m doc.add_paragraph(\u001b[43mdata\u001b[49m[\u001b[33m'\u001b[39m\u001b[33manrede\u001b[39m\u001b[33m'\u001b[39m])\n\u001b[32m     32\u001b[39m \u001b[38;5;66;03m# 2) Numbered sections 1–6\u001b[39;00m\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m titles:\n\u001b[32m     34\u001b[39m     \u001b[38;5;66;03m# Add a numbered heading\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'data' is not defined"
      ]
     }
    ],
